--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .container {
   background: #eee;
   width: 700px;
-  height: 800px;
+
   margin: 50px 0 0 50px;
 
   /* method 1 */
@@ -66,15 +66,33 @@
   grid-gap: 15px 50px; */
 
   /* CSS_GRID GAP method 3 */
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 100px 100px 100px;
+
+  grid-gap: 15px 50px; */
+
+  /* CSS_GRID positioning method 3 */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 100px 100px 100px;
 
-  grid-gap: 15px 50px;
+  grid-gap: 20px;
 }
 
 .items1 {
   background: orangered;
+  /* grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 3;
+  grid-column-end: 4; */
+
+  /*short hand grid positioning*/
+  grid-row: 2/3;
+  grid-column: 3/4;
+
+  /*short hand grid positioning*/
+  grid-area: 2 / 3 / 3 / 4;
 }
 .items2 {
   background: yellowgreen;
@@ -90,4 +108,9 @@
 }
 .items6 {
   background: goldenrod;
+  background: orangered;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 2;
 }
